Current Version: Public Release 2.1
	
	TODO:
	 1) Programming from a non-consec file results in invalid offsets, which causes wrapping to occur
	
	IN PUBLIC RELEASE 2.1:
	=======================================
	  * Added in audio feedback for several situations
	  * Removed direct dataflash programming code to save space (nobody used it anyway)
	  * "Store" replaced with "Flash" in DATASTORE STATS now that confusion with PRGM DATAFLASH MODE is not possible
	  * Fixed Fusebyte/Lockbyte bug in PROGRAM AVR mode
	  * Fixed EEPROM storage bug
	  * Fixed incorrect message size on CMD_UNKNOWN return in ProgramManager
	  * Fixed SPI_MULTI bounds error (off by one)
	  * Changed strings to use char rather than uint8_t, allowing for a generic makefile without GCC4.x specific flags
	  * PROGRAM AVR mode now allows for arbitrary combinations of programming options
	  * Added in new startup mode settings option
	  * Programming a data type in STORAGE MODE now automatically enables that data type for programming in PROGRAM AVR mode
	  * Fixed EEPROM programming very slow in all modes
	  * Returned firmware version can now be set up to V2.20
	  * Target busy-wait loops now have timeouts of 100 milliseconds, moved busy-wait to its own routine for size
	  * 921600Hz programming speed is now correct (was actually double that due to a mis-calculation)
	  * New programming speeds (accessable via settings menu only) added - 115200Hz and 1843200Hz options
	  * RingBuffer access is now protected against race-conditions (atomic access)
	  * Added support for non-consecutive HEX file storage
	  * Write Flash/EEPROM command now only stored once per program to save on EEPROM lifespan
	  * PROG DONE/FAIL message is supressed when statup mode is set to PRODUCTION
	  * Made module-internal functions static project wide
	  * Status LED now blinks red when an error occurs
	  * Changes to the RESET MODE option now take effect immediatly after the option is exited