@@ -30,9 +30,7 @@
 	
 	#define SM_MAX_FUSELOCKBITS     20
 	
-	#define SM_EEPROM_OFFSET        ((1024UL * 256UL) + (8 * DF_INTERNALDF_BUFFBYTES)) // Offset at the 257Kb in dataflash, plus one block
-	
-	#define SM_BYTES_TO_BLOCKNUM(b) ROUND_UP(((b / DF_INTERNALDF_BUFFBYTES) / 8))
+	#define SM_EEPROM_OFFSET        ((DF_DATAFLASH_PAGES / 2) * DF_INTERNALDF_BUFFBYTES)
 	
 	// EXTERNAL VARIABLES:
 	extern uint8_t  MemoryType;
