@@ -20,24 +20,12 @@
 	#include "V2Protocol.h"
 
 	// DEFINES:
-	#define VAMM_PAGEERASED_DF_PAGE   (DF_DATAFLASH_PAGES - 1)
-	
 	#define VAMM_SETUP_NA             0
 	#define VAMM_SETUP_WRITE          1
 	#define VAMM_SETUP_READ           2
 	#define VAMM_SETUP_ADDR_DONE      3
 	
-	#define VAMM_FLAG_CHECK           FALSE
-	#define VAMM_FLAG_CLEAR           TRUE
-
-	// EXTERNAL VARIABLES:
-	extern uint8_t EraseFlagsTransReq;
-	extern uint8_t PageErasedFlags[DF_DATAFLASH_BLOCKS];
-	
 	// PROTOTYPES:
-	void    VAMM_EnterStorageMode(void);
-	void    VAMM_ExitStorageMode(void);
-	
 	void    VAMM_EraseAVRMemory(void);
 	void    VAMM_SetAddress(void);
 
@@ -45,9 +33,6 @@
 	uint8_t VAMM_ReadByte(void) ATTR_WARN_UNUSED_RESULT;
 	uint8_t VAMM_ReadConsec(void) ATTR_WARN_UNUSED_RESULT;
 
-	#if defined(INC_FROM_VAMM) 
-	  static void VAMM_CheckSetCurrPageCleared(const uint8_t ClearPageErasedFlag);
-	  static void VAMM_Cleanup(void);
-	#endif
+	void    VAMM_Cleanup(void);
 	
 #endif
