@@ -1,8 +1,9 @@
 Current Version: Public Release 2.1
 	
 	TODO:
-	 1) Programming from a non-consec file results in invalid offsets, which causes wrapping to occur
-	
+	 1) Interrupt-drive erasing so that erasing in storage mode does not fail
+	 2) Return correct stored program size
+	 
 	IN PUBLIC RELEASE 2.1:
 	=======================================
 	  * Added in audio feedback for several situations
